tests/semantic/pass/infered-declaration4.tiger
let
	var x := 1
in
	x := 2
end
