tests/semantic/fail/assignment4.tiger
let
	var x : int := 1
  var y : string := "test"
in
  x := y
end
